<resources>
    <string name="app_name">Critic</string>
    <string name="lblMovies">Movies</string>
    <string name="lblTvShows">TV Shows</string>
    <string name="lblMusic">Music</string>
    <string name="lblGames">Games</string>
    <string name="lblName">Name</string>
    <string name="lblReleaseDate">Release Date</string>
    <string name="lblRating">Rating</string>
    <string name="lblScore">Score</string>
    <string name="lblUrl">URL</string>
    <string name="lblCast">Cast</string>
    <string name="lblGenre">Genre</string>
    <string name="lblUserScore">User Score</string>
    <string name="lblRuntime">Runtime</string>
    <string name="lblAuthor">Author</string>
    <string name="lblComingSoon">Coming soon...</string>
    <string name="lblFavorites">Favorites</string>
</resources>
