<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/llMovies"
                android:background="@color/colorMovies"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblMovies"
                    android:id="@+id/tvMovies"
                    android:textColor="#ffffff"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/llTvShows"
                android:background="@color/colorTvShows"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblTvShows"
                    android:id="@+id/tvTvShows"
                    android:textColor="#ffffff"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/llMusic"
                android:background="@color/colorMusic"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblMusic"
                    android:textColor="#ffffff"
                    android:id="@+id/tvMusic"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/llGames"
                android:background="@color/colorGames"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lblGames"
                    android:textColor="#ffffff"
                    android:id="@+id/tvGames"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>